Add edit and destroy methods to vacation request controller

--- a/app/views/vacation_requests/index.html.erb
+++ b/app/views/vacation_requests/index.html.erb
@@ -1,4 +1,5 @@
+<%= will_paginate @vacation_requests,:page_links => true%>
 <%= render 'shared/vacation_request', obj: @vacation_requests %>
-
 <%= link_to "Отправить заявку на отпуск", new_vacation_request_path, class: "button" %>
+
 
