--- a/app/views/shared/_vacation_request.html.erb
+++ b/app/views/shared/_vacation_request.html.erb
@@ -1,3 +1,13 @@
-<% obj.each do |request| %>
-  <%= link_to "#{request.start_date.to_s.to_date} - #{request.end_date.to_date}", vacation_request_path(request) %>
-<% end %>
+<body>
+<div class="container">
+  <h2>Список заявок на отпуск</h2>
+  <% obj.each do |request| %>
+    <a class="vacation-request button-request" href="<%= vacation_request_path(request) %>">
+      <p>Дата начала отпуска: <%= request.start_date.strftime('%d.%m.%Y') %></p>
+      <p>Дата окончания отпуска: <%= request.end_date.strftime('%d.%m.%Y') %></p>
+      <% status = { "pending" => "Ожидание", "approved" => "Одобрена", "rejected" => "Отказ" } %>
+      <p>Статус заявки: <%= status[request.status] %></p>
+    </a>
+  <% end %>
+</div>
+</body>
