Add styles to vacation_request

--- a/app/assets/stylesheets/vacation_request.css.scss
+++ b/app/assets/stylesheets/vacation_request.css.scss
@@ -3,18 +3,31 @@ html {
   text-align: center;
 
   .button {
-    background-color: #e7e7e9;
+    background-color: #bebebe;
     border: none;
     color: black;
-    padding: 15px 32px;
+    padding: 15px 19px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px;
+  }
+  .button-request {
+    background-color: #e1e1e1;
+    border: none;
+    color: black;
+    padding: 15px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
   }
-
+  .button-request:hover {
+    background-color: #c0c0c0;
+  }
   .button:hover {
-    background-color: #eee;
+    background-color: #abaaaa;
   }
 }
 body {
@@ -43,7 +56,7 @@ h2 {
   margin-bottom: 5px;
 }
 .form-group input {
-  width: 100%;
+  width: 80%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -55,4 +68,11 @@ h2 {
 .warning {
   text-align: center;
   color: #bd3030;
+}
+.vacation-request {
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin: 10px 0;
+  border-radius: 5px;
 }
