--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,11 +2,16 @@
   <nav>
     <ul class="navigation-menu">
       <li><%= link_to "Главная страница", root_path %></li>
-      <li><%= link_to "Заявки на отпуск", vacation_requests_path %></li>
-      <li><%= link_to 'Вход', new_user_session_path %></li>
-      <li><%= link_to 'Регистрация', new_user_registration_path %></li>
-      <% if current_user %>
+      <% if user_signed_in? %>
+        <% if admin? %>
+        <li><%= link_to "Подтверждение заявок", admin_vacation_requests_path %></li>
+          <% else %>
+          <li><%= link_to "Заявки на отпуск", vacation_requests_path %></li>
+        <% end %>
         <li><%= link_to "Выход", destroy_user_session_path %></li>
+      <% else %>
+        <li><%= link_to 'Вход', new_user_session_path %></li>
+        <li><%= link_to 'Регистрация', new_user_registration_path %></li>
       <% end %>
     </ul>
   </nav>
